@@ -5,16 +5,18 @@ SUBDIRS =
 noinst_HEADERS =
 
 noinst_LTLIBRARIES =
-lib_LTLIBRARIES = libfludownloader.la
+lib_LTLIBRARIES = libfludownloader.la libfludownloader_static.la
 include_HEADERS = $(top_srcdir)/lib/fludownloader.h
 
 libfludownloader_la_SOURCES = $(top_srcdir)/lib/fludownloader.c $(top_srcdir)/lib/fludownloader.h
-
-libfludownloader_la_CFLAGS = $(FLUDOWNLOADER_CFLAGS) -fPIC -DPIC
-
+libfludownloader_la_CFLAGS = $(FLUDOWNLOADER_CFLAGS)
 libfludownloader_la_LIBADD = $(FLUDOWNLOADER_LIBS)
-
 libfludownloader_la_LDFLAGS = $(WIN32_LDFLAGS)
+
+libfludownloader_static_la_SOURCES = $(libfludownloader_la_SOURCES)
+libfludownloader_static_la_CFLAGS = $(libfludownloader_la_CFLAGS) -fPIC -DPIC
+libfludownloader_static_la_LDFLAGS = $(libfludownloader_la_LDFLAGS) -static
+libfludownloader_static_la_LIBADD = $(libfludownloader_la_LIBADD)
 
 if BUILD_EXAMPLES
 noinst_PROGRAMS = multidl
@@ -26,7 +28,10 @@ multidl_CFLAGS = -I$(top_srcdir)/lib -I$(top_srcdir) $(FLUDOWNLOADER_CFLAGS)
 multidl_LDADD = $(FLUDOWNLOADER_LIBS) $(top_builddir)/libfludownloader.la
 endif
 
-pcfiles = $(top_builddir)/fludownloader.pc
+pcfiles = \
+	$(top_builddir)/fludownloader.pc \
+	$(top_builddir)/fludownloader_static.pc
+
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = $(pcfiles)
 
